--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.6",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.3"
   }
