--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -29,6 +29,7 @@ jobs:
   build:
     env:
       NEXT_PUBLIC_BASE_PATH: /spassc
+    env:
       SECRET_API_KEY: dfkljgdklfjfjsajajksjdfjsdkjfklsdjfklsdj
     runs-on: ubuntu-latest
     steps:
