--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -32,10 +32,10 @@ jobs:
     - name: Build my App  
       run: npm run build
       env:
-        NEXT_PUBLIC_BASE_PATH: /youtube-2020-august-github-pages-github-actions
+        NEXT_PUBLIC_BASE_PATH: /spassc
     - run: npm run export
       env:
-        NEXT_PUBLIC_BASE_PATH: /youtube-2020-august-github-pages-github-actions
+        NEXT_PUBLIC_BASE_PATH: /spassc
     - run: touch ./out/.nojekyll
     
     - name: Deploy 🚀
