--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -9,6 +9,11 @@ on:
   pull_request:
     branches: [ master ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
 
