--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -84,9 +84,12 @@ jobs:
 
   # Deployment job
   deploy:
+    env:
+      NEXT_PUBLIC_BASE_PATH: /spassc
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+        
     runs-on: ubuntu-latest
     needs: build
     steps:
