--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -18,6 +18,8 @@ permissions:
   pages: write
   id-token: write
 
+env:
+  NEXT_PUBLIC_BASE_PATH: /spassc
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
