--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -91,9 +91,19 @@ jobs:
 
   # Deployment job
   deploy:
-    - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@3.5.9
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: out # The folder the action should deploy.
+    env:
+      NEXT_PUBLIC_BASE_PATH: /spassc
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+        
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: JamesIves/github-pages-deploy-action@3.5.9
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: out # The folder the action should deploy.
