--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
@@ -23,5 +24,8 @@
     "sqlite3": "^5.1.6",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/sqlite3": "^3.1.8"
   }
 }
