--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
     "formik": "^2.2.9",
+    "knex": "^2.4.2",
     "next": "13.2.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6",
