--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
+    "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "knex": "^2.4.2",
     "next": "13.2.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
