--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.2.3",
     "faunadb": "^4.8.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.11.5",
     "knex": "^2.4.2",
     "netlify-cli": "^13.2.2",
     "netlify-lambda": "^2.0.16",
