--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
 {
   "name": "spassc",
-  "proxy": {
-    "/.netlify/functions": {
-      "target": "http://localhost:9000",
-      "pathRewrite": {
-        "^/\\.netlify/functions": ""
-      }
-    }
-  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,18 +19,16 @@
     "faunadb": "^4.8.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.11.5",
-    "knex": "^2.4.2",
     "netlify-cli": "^13.2.2",
     "netlify-lambda": "^2.0.16",
-    "next": "13.2.4",
+    "next": "^13.3.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-    "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.6",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.3"
   },
