--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-spinners": "^0.13.8",
+    "swr": "^2.1.3",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.3"
   },
